objects/Applicable_Discount__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Applying discount to specific profiles and users as prime users</description>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Applicable Discount</label>
</CustomObject>